--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "main": "index.js",
   "repository": "https://github.com/Hzhxi9/utils.git",
   "author": "huangzx <huangzhixi@youxin.cloud>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts":{
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^27.3.0"
+  }
 }
